# srcom_py

./: README.rst  pyproject.toml  requirements.txt
speedrun_api/: api.py  endpoint.py  schemas.py
speedrun_api/schemas/: components.py
src_api/: __init__.py
src_api/schemas/: __init__.py  responses.py
srcom_py/: __init__.py  endpoint.py
srcom_py/schemas/: params.py
tests/: conftest.py  test_game.py  test_leaderboard.py  test_user.py
